Fix text overlapping clear button in our custom combobox

--- a/src/app/shared/components/combobox/style.scss
+++ b/src/app/shared/components/combobox/style.scss
@@ -16,3 +16,18 @@ input {
   outline: none;
   padding: 16px 0 16px 16px;
 }
+
+mat-select {
+  &.mat-select {
+    mat-select-trigger {
+      div {
+        // Required to override style added programmatically by the Angular Material on the div element
+        display: block !important;
+        flex: none !important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 90%;
+      }
+    }
+  }
+}
